# Stroke-NCCT-Segmentation-CNN

./: LICENSE  README.md
Post_Processing/: README-Post_Processing.md  postProcessing.py
Pre_Processing/: README-Pre_Processing.md
Pre_Processing/src/: CMakeLists.txt  imageManipulation.cpp  imageManipulation.h  main.cpp
Trained_CNN/: README-Trained_CNN.md
Trained_CNN/filelists/: TestChannels_NCCT.cfg  TestGroundTruthLabels.cfg  TestNamesOfPredictions.cfg
Trained_CNN/test_configuration/: TestConfig.cfg
Trained_CNN/trained_model/: ModelConfig_TuladharSchimert_deepMedic_strokeNCCTsegmentation_20200515.cfg  TrainedWeights_TuladharSchimert_deepMedic_strokeNCCTsegmentation_20200515.model.ckpt.index
